# timer-in-pyqt5

./: .gitignore  README.md  __init__.py  pyproject.toml  ruff.toml
.github/workflows/: code-quality.yaml  test.yaml
src/: __init__.py  main.py
tests/: conftest.py  test_build_palette.py  test_format_elapsed.py  test_timer_window_init.py  test_timer_window_lap.py  test_timer_window_reset.py  test_timer_window_start_pause.py  test_timer_window_tick.py
ui/: main.ui
