[project]
name = "timer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyQt5>=5.15.10,<5.16",
]

[dependency-groups]
dev = [
    "bandit[toml]==1.8.6",
    "pip-audit==2.9.0",
    "pytest==8.4.1",
    "ruff==0.12.9",
    "yamllint>=1.38.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]